slurm-52951447.out
====================================
Functions available:

create_test()
grid_scale_test()
obj_scale_test()
full_scale_test()
run_mesh_scale_experiment()
create_scale_plot()
exit()

====================================
call function() = test name = dimension = g++ -Wall -std=c++11 -I../src -O3 main_from_txt.cpp src/2DSolver/PressureSolver.cpp src/2DSolver/MomentumSolver2D.cpp src/2DSolver/KDPointCloud.cpp src/2DSolver/MassSpring2D.cpp src/2DSolver/Boundary.cpp src/2DSolver/SolidObject.cpp src/2DSolver/SimParams.cpp src/2DSolver/NSSolver.cpp src/2DSolver/ObjectSeeder.cpp src/2DSolver/Pool2D.cpp src/LASolver/accel_class.cpp src/LASolver/MatrixIter.cpp src/LASolver/rcm.cpp src/LASolver/SparseItUtil.cpp src/LASolver/ILU_class.cpp src/Utils/GridValComparator.cpp src/Utils/Assembly.cpp src/Utils/GridVal2D.cpp src/Utils/GridVal3D.cpp src/Utils/SolidParams.cpp src/Utils/TestFormatter.cpp src/Utils/ADMMPG.cpp -o fluidsolver2d.exe
In file included from ./src/2DSolver/Pool2D.h:12,
                 from ./src/2DSolver/NSSolver.h:5,
                 from main_from_txt.cpp:10:
./src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/Pool2D.h:12,
                 from src/2DSolver/PressureSolver.h:5,
                 from src/2DSolver/PressureSolver.cpp:1:
src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/Pool2D.h:12,
                 from src/2DSolver/MomentumSolver2D.cpp:4:
src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/KDPointCloud.h:4,
                 from src/2DSolver/KDPointCloud.cpp:1:
src/2DSolver/./MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/MassSpring2D.cpp:1:
src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/Pool2D.h:12,
                 from src/2DSolver/NSSolver.h:5,
                 from src/2DSolver/NSSolver.cpp:3:
src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
src/2DSolver/ObjectSeeder.cpp:6:10: fatal error: Eigen/Dense: No such file or directory
    6 | #include <Eigen/Dense>
      |          ^~~~~~~~~~~~~
compilation terminated.
In file included from src/2DSolver/Pool2D.h:12,
                 from src/2DSolver/Pool2D.cpp:1:
src/2DSolver/MassSpring2D.h:8:10: fatal error: Eigen/Dense: No such file or directory
    8 | #include "Eigen/Dense"
      |          ^~~~~~~~~~~~~
compilation terminated.
src/LASolver/accel_class.cpp: In constructor ‘SparseItObj::scaler_orthomin::scaler_orthomin(int, double*, int)’:
src/LASolver/accel_class.cpp:62:16: warning: catching polymorphic type ‘class std::bad_alloc’ by value [-Wcatch-value=]
   62 |     catch(std::bad_alloc) {
      |                ^~~~~~~~~
src/LASolver/ILU_class.cpp: In member function ‘void SparseItObj::scaler_ILU::sfac2(const int*, const int*, int, int*, int*)’:
src/LASolver/ILU_class.cpp:171:14: warning: catching polymorphic type ‘class std::bad_alloc’ by value [-Wcatch-value=]
  171 |   catch(std::bad_alloc){// catch
      |              ^~~~~~~~~
src/LASolver/ILU_class.cpp:135:7: warning: variable ‘itemp’ set but not used [-Wunused-but-set-variable]
  135 |   int itemp, nrow;
      |       ^~~~~
src/LASolver/ILU_class.cpp: In member function ‘void SparseItObj::scaler_ILU::factor(const int*, const int*, const double*)’:
src/LASolver/ILU_class.cpp:356:14: warning: catching polymorphic type ‘class std::bad_alloc’ by value [-Wcatch-value=]
  356 |   catch(std::bad_alloc){// catch block
      |              ^~~~~~~~~
src/LASolver/ILU_class.cpp: In member function ‘void SparseItObj::scaler_ILU::facdrp(const int*, const int*, double*, double, int*, int*)’:
src/LASolver/ILU_class.cpp:699:11: warning: variable ‘itemp’ set but not used [-Wunused-but-set-variable]
  699 |       int itemp, nrow;
      |           ^~~~~
src/LASolver/ILU_class.cpp: In member function ‘void SparseItObj::scaler_ILU::merged(int, int*, int, double*, double, double*)’:
src/LASolver/ILU_class.cpp:640:29: warning: ‘drop_temp’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  640 |                        test =  drop_temp *
      |                        ~~~~~^~~~~~~~~~~~~~
  641 |                             odiag[ rowsp[row].jaf[ii] ] ;
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/LASolver/ILU_class.cpp:644:17: warning: ‘test’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  644 |                 if( fabs( temp) > test){
      |                 ^~
src/LASolver/ILU_class.cpp: In member function ‘void SparseItObj::scaler_ILU::elimrow(int, double*, double*, int*, int&, int&, int*, int*, double)’:
src/LASolver/ILU_class.cpp:1503:21: warning: ‘test’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 1503 |                     if( fabs(temp) > test ){ // insert new entry
      |                     ^~
src/LASolver/ILU_class.cpp:1494:29: warning: ‘drop_temp’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 1494 |                        test =  drop_temp *
      |                        ~~~~~^~~~~~~~~~~~~~
 1495 |                             odiag[ invord[ rowsp[row].jaf[ii] ]  ] ;
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from src/Utils/Assembly.cpp:1:
src/Utils/Assembly.h:4:10: fatal error: Eigen/Sparse: No such file or directory
    4 | #include <Eigen/Sparse>
      |          ^~~~~~~~~~~~~~
compilation terminated.
src/Utils/TestFormatter.cpp:10:21: error: ‘filesystem’ is not a namespace-name
   10 | namespace fs = std::filesystem;
      |                     ^~~~~~~~~~
src/Utils/TestFormatter.cpp: In constructor ‘TestFormatter::TestFormatter(const char*)’:
src/Utils/TestFormatter.cpp:20:10: error: ‘fs’ has not been declared
   20 |     if (!fs::exists(*testDir)) {
      |          ^~
src/Utils/TestFormatter.cpp:21:9: error: ‘fs’ has not been declared
   21 |         fs::create_directory(*testDir);
      |         ^~
src/Utils/ADMMPG.cpp:1:10: fatal error: Eigen/Sparse: No such file or directory
    1 | #include <Eigen/Sparse>
      |          ^~~~~~~~~~~~~~
compilation terminated.
make: *** [Makefile:15: sol2d] Error 1
['./TestDrivers/2DDrivers/ScaleTestTwo80', './TestDrivers/2DDrivers/ScaleTestTwo320', './TestDrivers/2DDrivers/ScaleTestTwo40', './TestDrivers/2DDrivers/ScaleTestTwo1280', './TestDrivers/2DDrivers/ScaleTestTwo640', './TestDrivers/2DDrivers/ScaleTestTwo160']
['ScaleTestTwo80', 'ScaleTestTwo320', 'ScaleTestTwo40', 'ScaleTestTwo1280', 'ScaleTestTwo640', 'ScaleTestTwo160']
Traceback (most recent call last):
  File "experiments.py", line 561, in <module>
    eval(mode)
  File "<string>", line 1, in <module>
  File "experiments.py", line 492, in run_mesh_scale_experiment
    for run in num_runs:
TypeError: 'int' object is not iterable
